<resources>
    <string name="a_full_charge_will_last_about">A full charge will last about %s</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abnormal_reset_notification_content_phone">Your phone is running slow. Restart to speed it up again.</string>
    <string name="abnormal_reset_notification_content_tablet">Your tablet is running slow. Restart to speed it up again.</string>
    <string name="abnormal_reset_notification_restart_overnight_button">Restart overnight</string>
    <string name="abnormal_reset_notification_title">Restart for faster performance</string>
    <string name="about">About %s</string>
    <string name="about_dialog_body">Update to the latest version of Galaxy Apps to enjoy new features and improvements.</string>
    <string name="about_dialog_title">Notifications</string>
    <string name="about_network_fail">"Couldn't check for updates."</string>
    <string name="about_network_retry">Retry</string>
    <string name="about_no_network_connection">No network connection</string>
    <string name="accs_remove">Remove %s</string>
    <string name="action_add">add</string>
    <string name="action_add_app">Add apps</string>
    <string name="action_invalid_message_adaptive_power_saving">"Couldn't perform this action because Adaptive power saving was on."</string>
    <string name="action_invalid_message_during_call">"Couldn't perform this action during a call."</string>
    <string name="action_invalid_message_general_error">"Couldn't perform this action because another operation is preventing it."</string>
    <string name="active_process">View more</string>
    <string name="active_process_viva">View More:Click View More:Push View More:Tap View More</string>
    <string name="adaptive_power_saving_menu">Adaptive power saving</string>
    <string name="auto_cleaner">Auto restart at set times</string>
    <string name="auto_dim_screen_content">Dim your screen when battery is below %d%%.</string>
    <string name="auto_dim_screen_title">Auto dim screen</string>
    <string name="auto_opt_title">Auto optimize daily</string>
    <string name="automation_title">Automation</string>
    <string name="battery_mode_adaptive_power_saving_title">Adaptive power saving</string>
    <string name="battery_mode_dark_mode">Turn on dark mode</string>
    <string name="battery_mode_dialog_aod_title">Turn off Always on display</string>
    <string name="battery_mode_motion_smoothness">Set Motion smoothness to Standard</string>
    <string name="battery_mode_turn_off_5g_network">Turn off 5G Network</string>
    <string name="battery_protection">Battery protection</string>
    <string name="battery_settings_background_usage_limits_title">Background usage limits</string>
    <string name="battery_settings_battery_information">Battery information</string>
    <string name="battery_settings_charging_info_summary_support">Show battery level and estimated time until full when Always On Display is off or not shown.</string>
    <string name="battery_settings_charging_info_switch">Show charging information</string>
    <string name="battery_settings_charging_settings">Charging settings</string>
    <string name="battery_settings_percentage_switch">Show battery percentage</string>
    <string name="care_report_title">Care report</string>
    <string name="contact_us">Contact us</string>
    <string name="enhanced_cpu_title">Enhanced processing</string>
    <string name="fast_app_launching_summary">"Start apps faster by loading them in the background based on your expected usage.
Uses more memory"</string>
    <string name="fast_app_launching_title">Fast app launching</string>
    <string name="fast_charging">Fast charging</string>
    <string name="fast_wireless_charging">Fast wireless charging</string>
    <string name="key_advanced_settings_adaptive_power_saving">key_advanced_settings_adaptive_power_saving</string>
    <string name="key_advanced_settings_auto_optimization">key_advanced_settings_auto_optimization</string>
    <string name="key_advanced_settings_auto_reset">key_advanced_settings_auto_reset</string>
    <string name="key_advanced_settings_fast_app_launching">key_advanced_settings_fast_app_launching</string>
    <string name="key_advanced_settings_security_auto_scan">key_advanced_settings_security_auto_scan</string>
    <string name="key_auto_dim_screen">key_auto_dim_screen</string>
    <string name="key_auto_dim_screen_category">key_auto_dim_screen_category</string>
    <string name="key_auto_scan_apps_per_day">key_auto_scan_apps_per_day</string>
    <string name="key_auto_scan_installing_apps">key_auto_scan_installing_apps</string>
    <string name="key_battery_charging_menu_category">key_battery_charging_menu_category</string>
    <string name="key_battery_charging_menu_fast_cable_charge">key_battery_charging_menu_fast_cable_charge</string>
    <string name="key_battery_charging_menu_fast_wireless_charge">key_battery_charging_menu_fast_wireless_charge</string>
    <string name="key_battery_charging_menu_fast_wireless_charge_night_mode">key_battery_charging_menu_fast_wireless_charge_night_mode</string>
    <string name="key_battery_charging_menu_super_fast_cable_charge">key_battery_charging_menu_super_fast_cable_charge</string>
    <string name="key_battery_main_aod_charging_information_switch">key_battery_main_aod_charging_information_switch</string>
    <string name="key_battery_main_app_power_management">key_battery_main_app_power_management</string>
    <string name="key_battery_main_battery_information">key_battery_main_battery_information</string>
    <string name="key_battery_main_battery_protection">key_battery_main_battery_protection</string>
    <string name="key_battery_main_charging_category">key_battery_main_charging_category</string>
    <string name="key_battery_main_charging_settings">key_battery_main_charging_settings</string>
    <string name="key_battery_main_percentage_switch">key_battery_main_percentage_switch</string>
    <string name="key_battery_main_protect_battery">key_battery_main_protect_battery</string>
    <string name="key_battery_main_saving_power_mode">key_battery_main_saving_power_mode</string>
    <string name="key_battery_main_wireless_power_share">key_battery_main_wireless_power_share</string>
    <string name="key_battery_saving_power_category">key_battery_saving_power_category</string>
    <string name="key_power_mode_5g">key_5g</string>
    <string name="key_power_mode_always_on_display">key_always_on_display</string>
    <string name="key_power_mode_brightness">key_brightness</string>
    <string name="key_power_mode_category_advanced">key_category_advanced</string>
    <string name="key_power_mode_category_advanced_setting">key_category_advanced_setting</string>
    <string name="key_power_mode_category_display">key_category_display</string>
    <string name="key_power_mode_cpu_limit">key_cpu_limit</string>
    <string name="key_power_mode_dark_mode">key_power_mode_dark_mode</string>
    <string name="key_power_mode_description">key_power_mode_description</string>
    <string name="key_power_mode_limit_apps_and_home_screen">key_battery_power_mode_limit_apps_and_home_screen</string>
    <string name="key_power_mode_motion_smoothness">key_motion_smoothness</string>
    <string name="key_power_mode_screen_time_out">key_screen_time_out</string>
    <string name="key_protect_battery_category">key_protect_battery_category</string>
    <string name="key_settings_about">key_settings_about</string>
    <string name="key_settings_contact_us">key_settings_contact_us</string>
    <string name="key_settings_customization_service">key_settings_customization_service</string>
    <string name="key_settings_customization_service_category">key_settings_customization_service_category</string>
    <string name="key_settings_show_on_apps_screen">key_settings_show_on_apps_screen</string>
    <string name="key_use_device_protect_main_info_category">key_use_device_protect_main_info_category</string>
    <string name="limit_apps_and_home_screen">Limit apps and Home screen</string>
    <string name="limit_apps_and_home_screen_description">For maximum power saving, allow only selected apps, limit all background activity, turn off Edge panels, and change to a dark theme.</string>
    <string name="memorysaver_title">Storage booster</string>
    <string name="option_not_applied_game_description">"This setting doesn't apply to games. You can manage game performance in Game Booster settings."</string>
    <string name="performance_optimization">Performance profile</string>
    <string name="performance_optimization_option_comfort">Light</string>
    <string name="performance_optimization_option_comfort_description">Prioritizes battery life and cooling efficiency over processing speed.</string>
    <string name="performance_optimization_option_standard">Standard</string>
    <string name="performance_optimization_option_standard_description">Provides the recommended balance between processing speed, battery life, and cooling efficiency.</string>
    <string name="power_saving">Power saving</string>
    <string name="power_saving_preference_display_header">Display</string>
    <string name="power_saving_preference_mpsm_header">Maximum power saving</string>
    <string name="power_saving_preference_mpsm_summary">Allow only selected apps, limit all background activity, turn off Edge panels, and turn on Dark mode.</string>
    <string name="power_saving_preference_performance_header">Performance</string>
    <string name="power_share_title">Wireless power sharing</string>
    <string name="processing_speed">Processing speed</string>
    <string name="processing_speed_high">High</string>
    <string name="processing_speed_high_summary">Get faster data processing. Helpful if some apps are running slowly. Uses more battery and may cause heating.</string>
    <string name="processing_speed_max">Maximum</string>
    <string name="processing_speed_max_summary">Best for short-term use with processing-intensive apps. Uses battery rapidly and tends to cause heating.</string>
    <string name="processing_speed_optimized">Optimized</string>
    <string name="processing_speed_optimized_summary">Best for most situations. Balances speed with battery and cooling efficiency.</string>
    <string name="protect_battery">Protect battery</string>
    <string name="routine_optimize_phone">Optimize phone</string>
    <string name="security_advanced_auto_scan_title">Auto scan for malware</string>
    <string name="security_auto_scan_for_installed_apps">Auto scan apps daily</string>
    <string name="security_auto_scan_for_installing_apps">Auto scan when installing apps</string>
    <string name="settings">Settings</string>
    <string name="settings_search_menu_title">Search</string>
    <string name="super_fast_cable_charging">Super fast charging</string>
</resources>