<?xml version="1.0" encoding="utf-8"?>
<actions>
    <action category="battery" component="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineActionProvider" component_type="provider" config_activity="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineSettingActivity" description="@string/fast_charging" icon="@drawable/routines_ic_fast_charging" label="@string/fast_charging" tag="fast_cable_charging" />
    <action category="battery" component="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineActionProvider" component_type="provider" config_activity="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineSettingActivity" description="@string/super_fast_cable_charging" icon="@drawable/routines_ic_fast_charging" label="@string/super_fast_cable_charging" tag="super_fast_cable_charging" />
    <action category="battery" component="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineActionProvider" component_type="provider" config_activity="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineSettingActivity" description="@string/fast_wireless_charging" icon="@drawable/routines_ic_fast_charging" label="@string/fast_wireless_charging" tag="fast_wireless_charging" />
    <action category="battery" component="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineActionProvider" component_type="provider" config_activity="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineSettingActivity" description="@string/enhanced_cpu_title" icon="@drawable/routines_ic_enhanced_processing" label="@string/enhanced_cpu_title" tag="enhanced_processing" />
    <action category="battery" component="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineActionProvider" component_type="provider" config_activity="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineSettingProcessingSpeedActivity" description="@string/processing_speed" icon="@drawable/routines_ic_enhanced_processing" label="@string/processing_speed" tag="processing_speed" />
    <action category="battery" component="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineActionProvider" component_type="provider" config_activity="com.samsung.android.lool/com.samsung.android.sm.routine.RoutineSettingActivity" description="@string/protect_battery" icon="@drawable/routines_ic_protect_battery" label="@string/protect_battery" tag="protect_battery" />
</actions>
